<resources>
    <string name="app_name">Unicorn</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="select_date">Select Date</string>
    <string name="add_post_description">Add post description</string>
    <string name="add_post_title">Add post title</string>
    <string name="add_event">Add Event</string>
    <string name="event">"Event "</string>
</resources>