<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5CCE6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/postTitle"
            android:hint="@string/add_post_title"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/postDesc"
            android:hint="@string/add_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:lines="6"
            android:minLines="6"
            android:scrollbars="vertical"
            android:gravity="top|left"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:layout_gravity="end"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/progress_bar_animation"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPostImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_add_a_photo"
            android:visibility="visible"/>

        <Button
            android:id="@+id/postUploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:background="@drawable/button_bg"
            android:layout_margin="30dp"/>

    </LinearLayout>

</ScrollView>